# tessera

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/tessera-channel/: Cargo.toml  README.md
crates/tessera-channel/src/: channel.rs  error.rs  header.rs  lib.rs  namespace.rs  region.rs
crates/tessera-pool/: Cargo.toml  README.md
crates/tessera-pool/src/: error.rs  header.rs  lib.rs  namespace.rs  pool.rs  region.rs
crates/tessera-ring/: Cargo.toml  README.md
crates/tessera-ring/src/: error.rs  header.rs  lib.rs  namespace.rs  region.rs  ring.rs
crates/tessera-sink/: Cargo.toml  README.md
crates/tessera-sink-worker/: README.md
crates/tessera-sink/src/: config.rs  error.rs  lib.rs  messages.rs  names.rs  sink.rs  spawn.rs  worker.rs
crates/tessera-slate/: Cargo.toml
docs/: concept_landscape.md  decision_log.md  issue_facade_thread_safety.md
examples/: README.md  channel_intra_container.py  channel_mpsc.py  pool_intra_container.py  ring_intra_container.py  sink_atomic_write.py  sink_chunked_streaming.py
python/py-tessera-channel/: Cargo.toml  README.md  pyproject.toml
python/py-tessera-channel/python/tessera_channel/: __init__.py
python/py-tessera-channel/src/: lib.rs
python/py-tessera-channel/tests/: test_channel.py
python/py-tessera-pool/: Cargo.toml  README.md  pyproject.toml
python/py-tessera-pool/python/tessera_pool/: __init__.py
python/py-tessera-pool/src/: lib.rs
python/py-tessera-pool/tests/: test_pool.py
python/py-tessera-pool/tests/parity/: SEED_DESIGN.md  test_pool_parity.py
python/py-tessera-pool/tests/parity/__snapshots__/test_pool_parity/: test_pool_parity_baseline.json
python/py-tessera-pool/tests/parity/seed/: payloads.py
python/py-tessera-ring/: Cargo.toml  README.md  pyproject.toml
python/py-tessera-ring/python/tessera_ring/: __init__.py
python/py-tessera-ring/src/: lib.rs
python/py-tessera-ring/tests/: test_ring.py
python/py-tessera-sink/: Cargo.toml  README.md  pyproject.toml
python/py-tessera-sink/python/tessera_sink/: __init__.py
python/py-tessera-sink/src/: lib.rs
python/py-tessera-sink/tests/: test_sink.py
python/py-tessera-slate/: Cargo.toml  README.md  pyproject.toml
python/py-tessera-slate/python/tessera_slate/: __init__.py
python/py-tessera-slate/src/: lib.rs
python/py-tessera-slate/tests/: test_slate.py
