[package]
name = "tessera-pool"
description = "Non-lossy lease-backed shared-memory pool primitive (Tessera Pool)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"

[lib]
name = "tessera_pool"

[dependencies]
blake3 = { workspace = true }
bytemuck = { version = "1.16", features = ["derive", "min_const_generics"] }
crossbeam-queue = "0.3"
libc = "0.2"
parking_lot = "0.12"
shared_memory = "0.12"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
