[package]
name = "tessera-ring"
description = "Lossy mmap-backed multi-writer / multi-reader ring buffer (Tessera Ring)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"

[lib]
name = "tessera_ring"

[dependencies]
blake3 = { workspace = true }
