[package]
name = "tessera-sink"
description = "Atomic-write worker pool to disk, built on tessera-pool (Tessera Sink)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"

[lib]
name = "tessera_sink"

[dependencies]
tessera-pool = { workspace = true }
tessera-channel = { workspace = true }
blake3 = { workspace = true }
thiserror = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
