[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tessera-channel"
version = "0.0.1"
description = "Non-lossy MPSC shared-memory queue (Tessera Channel)"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Indubitable Industries" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/Indubitable-Industries/tessera"

[tool.maturin]
module-name = "tessera_channel._native"
python-source = "python"
features = ["pyo3/extension-module"]
