[package]
name = "py-tessera-pool"
description = "Python bindings for tessera-pool (Tessera Pool)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "tessera_pool"
crate-type = ["cdylib"]

[dependencies]
parking_lot = "0.12"
pyo3 = { workspace = true }
tessera-pool = { workspace = true }

[lints.rust]
# pyo3 0.22's `create_exception!` expands a `cfg(feature = "gil-refs")`
# arm we never enable; declare it known so check-cfg stays quiet.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("gil-refs"))'] }
