[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tessera-pool"
version = "0.0.1"
description = "Non-lossy lease-backed shared-memory pool primitive (Tessera Pool)"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Indubitable Industries" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/Indubitable-Industries/tessera"

[project.optional-dependencies]
test = ["pytest>=7", "syrupy>=4"]

[tool.maturin]
module-name = "tessera_pool._native"
python-source = "python"
features = ["pyo3/extension-module"]
