[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tessera-sink"
version = "0.0.1"
description = "Atomic-write worker pool to disk, built on tessera-pool (Tessera Sink)"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Auspex Labs" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "tessera-pool>=0.0.1",
]

[project.urls]
Repository = "https://github.com/Auspex-Aerie/tessera"

[tool.maturin]
module-name = "tessera_sink._native"
python-source = "python"
features = ["pyo3/extension-module"]
